force-app/main/default/objects/PersonalIncomeTax__c/PersonalIncomeTax__c.object-meta.xml
<CustomObject>
    <label>所得税</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>PERSONAL INCOME TAX ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>