force-app/main/default/objects/PersonalIncomeTax__c/fields/ActualGasolineAllowance__c.field-meta.xml
<CustomField>
    <fullName>ActualGasolineAllowance__c</fullName>
    <formula>EmployeeID__r.GasolineAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Synchronize from Actual Gasoline Allowance in Payroll Ship.</inlineHelpText>
    <label>ACTUAL GASOLINE ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>