force-app/main/default/objects/PersonalIncomeTax__c/fields/BeneficiaryPIT__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryPIT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-PIT</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BeneficiaryPIT</relationshipName>
    <type>Lookup</type>
</CustomField>