force-app/main/default/objects/PersonalIncomeTax__c/fields/DependentDeduction__c.field-meta.xml
<CustomField>
    <fullName>DependentDeduction__c</fullName>
    <formula>PayrollSlip__r.EmployeeID__r.DependentDeduction__c  *  PayrollSlip__r.EmployeeID__r.NumberofDependent__c</formula>
    <inlineHelpText>Dependent Deduction=Number of Dependent in Employee*Dependent Deduction in Employee</inlineHelpText>
    <label>DEPENDENT DEDUCTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>