force-app/main/default/objects/PersonalIncomeTax__c/fields/HouseAllowanceTaxRatio__c.field-meta.xml
<CustomField>
    <fullName>HouseAllowanceTaxRatio__c</fullName>
    <inlineHelpText>HA=Housing Allowance
if((((((HA&lt; 5000000), (5%*HA),if(((((HA&lt;=10000000),(10%*HA-250000),if(((((HA&lt;=18000000),(15%*HA-750000),if ((((HA&lt;=32000000),(20%*HA-1650000),if(((HA&lt;=52000000),(25%*HA-3250000),if((HA&lt;=80000000),(30%*HA-5850000), (35%*HA-9850000))))</inlineHelpText>
    <label>HOUSING ALLOWANCE TAX RATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>