force-app/main/default/objects/PersonalIncomeTax__c/fields/HousingAllowanceTax__c.field-meta.xml
<CustomField>
    <fullName>HousingAllowanceTax__c</fullName>
    <formula>ActualHousingAllowance__c  *  HouseAllowanceTaxRatio__c - HousingAllowanceTaxAdjustment__c</formula>
    <inlineHelpText>Housing Allowance Tax=Housing Allowance Tax Ratio*Actual Housing Allowance - Housing Tax Adjustment</inlineHelpText>
    <label>HOUSING ALLOWANCE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>