force-app/main/default/objects/PersonalIncomeTax__c/fields/PayrollOrder__c.field-meta.xml
<CustomField>
    <fullName>PayrollOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYROLL ORDER</label>
    <referenceTo>PayrollOrder__c</referenceTo>
    <relationshipName>PERSONAL_INCOME_TAX</relationshipName>
    <type>Lookup</type>
</CustomField>