force-app/main/default/objects/PersonalIncomeTax__c/fields/PayrollSlip__c.field-meta.xml
<CustomField>
    <fullName>PayrollSlip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYROLL SLIP</label>
    <referenceTo>PayrollSlip__c</referenceTo>
    <relationshipName>PERSONAL_INCOME_TAX</relationshipName>
    <type>Lookup</type>
</CustomField>