force-app/main/default/objects/PersonalIncomeTax__c/fields/PersonalIncomeTax__c.field-meta.xml
<CustomField>
    <fullName>PersonalIncomeTax__c</fullName>
    <formula>TaxableAmountAfterDeduction__c  *  PersonalIncomeTaxRatio__c  -  TaxAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Personal Income Tax=Taxable Amount After Deduction*Personal Income Tax Ratio-Tax Adjustment</inlineHelpText>
    <label>PERSONAL INCOME TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>