force-app/main/default/objects/PersonalIncomeTax__c/fields/PITDebotAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>PITDebotAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>PIT_DEBIT</relationshipName>
    <type>Lookup</type>
</CustomField>