force-app/main/default/objects/PersonalIncomeTax__c/fields/PITPaidDate__c.field-meta.xml
<CustomField>
    <fullName>PITPaidDate__c</fullName>
    <label>PIT PAID DATE</label>
    <type>Date</type>
</CustomField>