force-app/main/default/objects/PersonalIncomeTax__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOURCES ID</label>
    <referenceTo>resource__c</referenceTo>
    <relationshipName>PERSONAL_INCOME_TAX</relationshipName>
    <type>Lookup</type>
</CustomField>