force-app/main/default/objects/PersonalIncomeTax__c/fields/SelfDeduction__c.field-meta.xml
<CustomField>
    <fullName>SelfDeduction__c</fullName>
    <formula>PayrollSlip__r.EmployeeID__r.SelfDeduction__c</formula>
    <inlineHelpText>Synchronize from Self Deduction in Employee.</inlineHelpText>
    <label>SELF DEDUCTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>