force-app/main/default/objects/PersonalIncomeTax__c/fields/UserAccountName__c.field-meta.xml
<CustomField>
    <fullName>UserAccountName__c</fullName>
    <formula>PayrollSlip__r.EmployeeID__r.UserAccountName__r.LastName</formula>
    <label>USER ACCOUNT NAME</label>
    <type>Text</type>
</CustomField>