force-app/main/default/objects/PersonalIncomeTax__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PayrollOrder__c</columns>
    <columns>PayrollSlip__c</columns>
    <columns>PayPeriodStartDate__c</columns>
    <columns>PayPeriodEndDate__c</columns>
    <columns>TaxableIncome__c</columns>
    <columns>TotalDeduction__c</columns>
    <columns>TaxableAmountAfterDeduction__c</columns>
    <columns>PersonalIncomeTaxRatio__c</columns>
    <columns>PersonalIncomeTax__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>HRManager</role>
        <role>HRStaff</role>
    </sharedTo>
</ListView>